@@ -434,6 +434,14 @@ New, Improved, and Deprecated Modules
 
   (Contributed by Giampaolo Rodolà; :issue:`9794`.)
 
+* :class:`asyncore.dispatcher` now provides a
+  :meth:`~asyncore.dispatcher.handle_accepted()` method
+  returning a `(sock, addr)` pair which is called when a connection has actually
+  been established with a new remote endpoint. This is supposed to be used as a
+  replacement for old :meth:`~asyncore.dispatcher.handle_accept()` and avoids
+  the user  to call :meth:`~asyncore.dispatcher.accept()` directly.
+
+  (Contributed by Giampaolo Rodolà; :issue:`6706`.)
 
 Multi-threading
 ===============
